Hide overflow-y to prevent scrollbar on Windows

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
   line-height: 1.4rem;
 }
 
